--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
       color: #f5f5f4; /* stone-100 */
       overflow-x: hidden;
     }
+    /* Custom Scrollbar Styling */
+    ::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+    ::-webkit-scrollbar-track {
+      background: #1c1917; /* stone-900 */
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #f97316; /* orange-500 */
+      border-radius: 4px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #ea580c; /* orange-600 */
+    }
+    /* Firefox scrollbar */
+    * {
+      scrollbar-width: thin;
+      scrollbar-color: #f97316 #1c1917;
+    }
     .scrollbar-hide::-webkit-scrollbar {
       display: none;
     }
